Finishes the backport